fix footer alignment

--- a/src/app/footer/footer.component.less
+++ b/src/app/footer/footer.component.less
@@ -1,7 +1,7 @@
 :host {
     ul {
         list-style-type: none;
-        margin: 50px 0 25px;
+        margin: 50px 25px;
         text-align: center;
     }
 
